--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <input id="search" name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
@@ -53,11 +53,11 @@
         <div class="row">
           <div class="col-md-12">
             <div class="jumbotron">
-              <h1 class="display-4">Hello, world!</h1>
+              <h1 id="blop" class="display-4">Hello, world!</h1>
               <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
               <hr class="my-4">
               <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-              <a class="btn btn-primary btn-lg" href="#" role="button" data-button="replace-title">Replace title</a>
+              <a id="btn" class="btn btn-primary btn-lg" href="#" role="button" data-button="replace-title">Replace title</a>
             </div>
           </div>
         </div>
