--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="col-md-6">
             <div class="p-2 bg-white rounded">
-              <video id="video" src="videos/jquery.mp4" width="100%" controls>
+              <video id="video" src="videos/jquery.mp4" width="100%" controls type="video/mp4">
                 Votre navigateur ne gère pas l'élément <code>video</code>.
               </video>
               <button type="button" class="btn btn-primary" id="playVideo">Lancer la video</button>
